SERVER-17231 Dissalow adding replica set shard with name: config