jstests/sharding/addshard2.js
@@ -15,6 +15,11 @@ rs2.startSet();
 rs2.initiate();
 var master2 = rs2.getMaster();
 
+// replica set with set name = 'config'
+var rs3 = new ReplSetTest({ 'name': 'config', nodes: 3, startPort: 31206 });
+rs3.startSet();
+rs3.initiate();
+
 // step 1. name given
 assert(s.admin.runCommand({"addshard" : getHostName()+":30001", "name" : "bar"}).ok, "failed to add shard in step 1");
 var shard = s.getDB("config").shards.findOne({"_id" : {"$nin" : ["shard0000"]}});
@@ -49,6 +54,19 @@ assert(!s.admin.runCommand({"addshard" : "add_shard2_rs2/NonExistingHost:31203"}
 assert(!s.admin.runCommand({"addshard" : "add_shard2_rs2/"+getHostName()+":31203,foo:9999"}).ok,
        "accepted bad hostname in step 6");
 
+//
+// SERVER-17231 Adding replica set w/ set name = 'config'
+//
+var configReplURI = 'config/' + getHostName() + ':31206';
+assert(!s.admin.runCommand({ 'addshard': configReplURI }).ok,
+       'accepted replica set shard with set name "config"');
+// but we should be allowed to add that replica set using a different shard name
+assert(s.admin.runCommand({ 'addshard': configReplURI, name: 'not_config' }).ok,
+       'unable to add replica set using valid replica set name');
+shard = s.getDB('config').shards.findOne({ '_id': 'not_config' });
+assert(shard, 'shard with name "not_config" not found');
+
 s.stop();
 rs1.stopSet();
 rs2.stopSet();
+rs3.stopSet();
